add estimated catchup time
